fix: Include name field in PATCH /store request body as required by validation

--- a/java-assignment/src/main/resources/META-INF/resources/apis.html
+++ b/java-assignment/src/main/resources/META-INF/resources/apis.html
@@ -1172,7 +1172,9 @@
                     });
                 }
                 if (method === 'PATCH') {
+                    // PATCH for store requires name field due to validation in StoreResource
                     return JSON.stringify({
+                        name: 'Patched Store ' + new Date().getTime(),
                         quantityProductsInStock: 150
                     });
                 }
