fix: Use placeholders in all Try It buttons

--- a/java-assignment/src/main/resources/META-INF/resources/apis.html
+++ b/java-assignment/src/main/resources/META-INF/resources/apis.html
@@ -408,7 +408,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('GET', '/product/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('GET', '/product/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -483,7 +483,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('PUT', '/product/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('PUT', '/product/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -504,7 +504,7 @@
                         <div class="section-title"><i class="fas fa-arrow-right"></i> Response (204 No Content)</div>
                         <div class="json-block">Empty response body</div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('DELETE', '/product/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('DELETE', '/product/{id}')">Try It</button>
                 </div>
             </div>
 
@@ -563,7 +563,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('GET', '/store/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('GET', '/store/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -630,7 +630,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('PUT', '/store/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('PUT', '/store/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -666,7 +666,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('PATCH', '/store/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('PATCH', '/store/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -687,7 +687,7 @@
                         <div class="section-title"><i class="fas fa-arrow-right"></i> Response (204 No Content)</div>
                         <div class="json-block">Empty response body</div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('DELETE', '/store/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('DELETE', '/store/{id}')">Try It</button>
                 </div>
             </div>
 
@@ -745,7 +745,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('GET', '/warehouse/WH-AMSTERDAM-001')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('GET', '/warehouse/{businessUnitCode}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -819,7 +819,7 @@
 }
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('PUT', '/warehouse/WH-AMSTERDAM-001/replacement')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('PUT', '/warehouse/{businessUnitCode}/replacement')">Try It</button>
                 </div>
             </div>
 
@@ -888,7 +888,7 @@
 ]
                         </div>
                     </div>
-                    <button class="try-it-btn" onclick="testAPI('GET', '/fulfillment/product/1/store/1')">Try It</button>
+                    <button class="try-it-btn" onclick="testAPI('GET', '/fulfillment/product/{id}/store/{id}')">Try It</button>
                 </div>
 
                 <div class="endpoint-card">
@@ -1105,6 +1105,45 @@
             button.textContent = 'Loading...';
 
             try {
+                // Replace placeholders with real IDs
+                let finalEndpoint = endpoint;
+
+                // Count how many {id} placeholders we need to replace
+                const idMatches = endpoint.match(/{id}/g) || [];
+                const hasBusinessUnitCode = endpoint.includes('{businessUnitCode}');
+
+                // Get product IDs if needed
+                if (idMatches.length > 0) {
+                    const productId = await getFirstItemId('/product');
+                    if (productId) {
+                        // Replace all {id} with the same productId for simplicity
+                        finalEndpoint = finalEndpoint.replace(/{id}/g, productId);
+                    } else {
+                        throw new Error('No products found. Please create a product first.');
+                    }
+                }
+
+                // Get store ID for fulfillment endpoints
+                if (endpoint.includes('/fulfillment/product')) {
+                    const storeId = await getFirstItemId('/store');
+                    if (storeId) {
+                        // Replace the second {id} (store) with the store ID
+                        let parts = finalEndpoint.split('/store/');
+                        finalEndpoint = parts[0] + '/store/' + storeId;
+                    } else {
+                        throw new Error('No stores found. Please create a store first.');
+                    }
+                }
+
+                if (hasBusinessUnitCode) {
+                    const warehouseCode = await getFirstItemId('/warehouse');
+                    if (warehouseCode) {
+                        finalEndpoint = finalEndpoint.replace('{businessUnitCode}', warehouseCode);
+                    } else {
+                        throw new Error('No warehouses found. Please create a warehouse first.');
+                    }
+                }
+
                 // Determine request options based on method
                 const options = {
                     method: method,
@@ -1115,10 +1154,10 @@
 
                 // Add sample body for POST, PUT, PATCH
                 if (method === 'POST' || method === 'PUT' || method === 'PATCH') {
-                    options.body = await getRequestBody(endpoint, method);
+                    options.body = await getRequestBody(finalEndpoint, method);
                 }
 
-                const response = await fetch(endpoint, options);
+                const response = await fetch(finalEndpoint, options);
                 const contentType = response.headers.get('content-type');
                 let result;
 
@@ -1127,17 +1166,19 @@
                     result = {
                         status: response.status,
                         statusText: response.statusText,
-                        data: data
+                        data: data,
+                        endpoint: finalEndpoint
                     };
                 } else {
                     result = {
                         status: response.status,
                         statusText: response.statusText,
-                        data: null
+                        data: null,
+                        endpoint: finalEndpoint
                     };
                 }
 
-                showResponse(button, result, method, endpoint);
+                showResponse(button, result, method, endpoint, finalEndpoint);
             } catch (error) {
                 showError(button, error, method, endpoint);
             } finally {
@@ -1253,7 +1294,7 @@
             return JSON.stringify({});
         }
 
-        function showResponse(button, result, method, endpoint) {
+        function showResponse(button, result, method, endpoint, finalEndpoint) {
             const card = button.closest('.endpoint-card');
             let responseBox = card.querySelector('.response-box');
 
@@ -1264,6 +1305,7 @@
             }
 
             const statusClass = result.status >= 200 && result.status < 300 ? 'status-200' : 'status-400';
+            const displayEndpoint = finalEndpoint || endpoint;
 
             let responseContent = `
                 <div style="margin-bottom: 10px;">
@@ -1273,7 +1315,7 @@
                     <strong>Method: </strong><span style="color: #667eea;">${method}</span>
                 </div>
                 <div style="margin-bottom: 10px;">
-                    <strong>Endpoint: </strong><code style="background: #f5f5f5; padding: 2px 5px; border-radius: 3px;">${endpoint}</code>
+                    <strong>Endpoint: </strong><code style="background: #f5f5f5; padding: 2px 5px; border-radius: 3px;">${displayEndpoint}</code>
                 </div>
                 <div style="margin-top: 15px;">
                     <strong>Response Body:</strong>
